# log-parser

./: .gitignore  NOTICE  README.md
.github/workflows/: release.yml
frontend/: app.js  index.html  style.css
frontend/tests/: guided-query-flow.test.cjs
llm-bench/: Cargo.toml  eval_set.json
llm-bench/src/: eval.rs  generate.rs  load.rs  main.rs  metrics.rs  models.rs  prompt.rs  schema.rs  validate.rs
scripts/: fetch_llm_resources.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/resources/intel/: ignore_rules.v1.json  mitre_core.v1.json  vpn_ranges.v1.json
src-tauri/src/: commands.rs  csv_import.rs  db.rs  excel_import.rs  export.rs  header_utils.rs  lib.rs  main.rs  query.rs  report.rs  semantic.rs  tabular_import.rs
src-tauri/src/intel/: activity.rs  analyst.rs  anomaly.rs  chains.rs  ignore_rules.rs  library.rs  llm_parser.rs  matcher.rs  mod.rs  parser.rs  query.rs  roles.rs  rule_conditions.rs  time.rs
src-tauri/tests/: agent_sentinel_e2e.rs  fixture_e2e.rs
testdata/: multi_sheet_sample.xlsx
