[package]
name = "log-parser"
version = "0.1.1"
description = "Fast generic viewer/filter for large Excel exports (Sentinel, Taegis, Defender, etc.)"
authors = ["log-parser contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "log_parser_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aho-corasick = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = { version = "0.36", features = ["dates"] }
csv = "1"
rust_xlsxwriter = { version = "0.96", features = ["constant_memory"] }
