[package]
name = "log-parser"
version = "0.2.4"
description = "Fast generic viewer/filter for large Excel exports (Sentinel, Taegis, Defender, etc.)"
authors = ["log-parser contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "log_parser_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aho-corasick = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = { version = "0.36", features = ["dates"] }
csv = "1"
rust_xlsxwriter = { version = "0.96", features = ["constant_memory"] }
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

# Apple's Accelerate framework backs candle's BLAS on macOS; without it MiniLM inference runs on
# candle's portable CPU kernels and semantic indexing of large imports takes hours instead of
# minutes.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11.0", features = ["accelerate"] }
candle-nn = { version = "0.11.0", features = ["accelerate"] }
candle-transformers = { version = "0.11.0", features = ["accelerate"] }
